--- a/waybar/style.css
+++ b/waybar/style.css
@@ -16,6 +16,17 @@
   margin-left: 16px;
 }
 
+#workspaces button {
+  all: initial;
+  padding: 0 6px;
+  margin: 0 1.5px;
+  min-width: 9px;
+}
+
+#workspaces button.empty {
+  opacity: 0.5;
+}
+
 #clock {
   background-color: transparent;
 }
