--- a/waybar/style.css
+++ b/waybar/style.css
@@ -55,7 +55,11 @@ window#waybar {
   padding: 0 6px;
 }
 
-/* Power profiles */
+#custom-brightness,
+#custom-nightlight {
+  padding-left: 6px;
+  padding-right: 6px;
+}
 #power-profiles-daemon {
   padding-left: 6px;
 }
