changed vesktop theme name

--- a/Vesktop/everforest.css
+++ b/Vesktop/everforest.css
@@ -1,13 +1,8 @@
 /**
- * @name midnight
+ * @name everforest
  * @description a dark, customizable discord theme.
- * @author refact0r
+ * @author zen0x
  * @version 2.1.1
- * @invite nz87hXyvcy
- * @website https://github.com/refact0r/midnight-discord
- * @source https://github.com/refact0r/midnight-discord/blob/master/themes/midnight.theme.css
- * @authorId 508863359777505290
- * @authorLink https://www.refact0r.dev
 */
 
 /* import theme modules */
